--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/SakeWolf/starpower-fm/issues"
   },
   "dependencies": {
-    "express": "~4.13.4"
+    "express": "~4.13.4",
+    "jade": "~1.11.0"
   }
 }
