--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "express": "~4.13.4",
     "jade": "~1.11.0",
-    "body-parser": "~1.15.0"
+    "body-parser": "~1.15.0",
+    "passport-local": "~1.0.0",
+    "passport": "~0.3.2",
+    "express-session": "~1.13.0"
   }
 }
