--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "url": "https://github.com/SakeWolf/starpower-fm/issues"
   },
   "dependencies": {
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.15.0",
-    "passport-local": "~1.0.0",
+    "express": "~4.13.4",
+    "express-session": "~1.13.0",
+    "jade": "~1.11.0",
+    "mongoose": "^4.4.5",
     "passport": "~0.3.2",
-    "express-session": "~1.13.0"
+    "passport-local": "~1.0.0"
   }
 }
